--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,34 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-img{
-    display: block;
-    max-width: 100%;
+img {
+  display: block;
+  max-width: 100%;
 }
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-    list-style: none;
-    padding: 0;
-    max-width: 1128px;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-.gallery-item{
-    width: calc((100% - 48px) / 3);
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  list-style: none;
+  padding: 0;
+  max-width: 1128px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.gallery-item:hover{
-    cursor: pointer;
-    scale: 1.05;
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.gallery-item:hover {
+  cursor: pointer;
+  scale: 1.05;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
 }
